--- a/app.json
+++ b/app.json
@@ -38,7 +38,7 @@
         "required": true
       },
       "STRING_SESSION": {
-        "description": "A Pyrogram v2 String Session from @BRANDEDSTRINGSESSION_BOT on Telegram.",
+        "description": "A Pyrogram v2 String Session from @String_sesion_op_Bot on Telegram.",
         "value": "",
         "required": true
       },
